--- a/index.css
+++ b/index.css
@@ -1,2 +1,34 @@
-/* CSS Document */
+.b-blib{
+	text-align:center;
+	min-width:800px;
+	max-width:80%;
+	position:relative;
+	margin: 0 auto;
+}
 
+.b-blib__header{
+	margin: 0 0 20px 0;
+	padding: 5px;
+	
+	border:1px solid #999999;
+	background:#CCCCCC;
+	
+	-webkit-border-bottom-right-radius: 6px;
+	-webkit-border-bottom-left-radius: 6px;
+	-moz-border-radius-bottomright: 6px;
+	-moz-border-radius-bottomleft: 6px;
+	border-bottom-right-radius: 6px;
+	border-bottom-left-radius: 6px;
+}
+.b-blib__footer{}
+.b-blib__block{
+	margin:10px 5px;
+	border:1px solid #999999;
+}
+.b-blib__block-title{
+	position:absolute;
+	margin:5px 10px;
+	padding: 3px;
+	border:1px dashed #CCCCCC;
+	cursor:pointer;
+}
