--- a/index.css
+++ b/index.css
@@ -44,3 +44,11 @@
     padding: 3px;
     border-top:1px dashed #CCCCCC;
 }
+.b-blib__block-code{
+    width:100%;
+    border: 0;
+    padding: 5px 0 0 0;
+    margin: 5px 0 0 0;
+    border-top:1px solid #999999;
+    resize: vertical;
+}
