--- a/b-/b-dynamic-menu/b-dynamic-menu.css
+++ b/b-/b-dynamic-menu/b-dynamic-menu.css
@@ -1,49 +1,49 @@
-.b-menu{
+.b-dynamic-menu{
     height: 100%;
     width:100%;
     white-space: nowrap;
 }
 
-.b-menu_center{
+.b-dynamic-menu_center{
 	text-align:center;
 }
 
-.b-menu_position_horisontal .b-menu__cell{
+.b-dynamic-menu_position_horisontal .b-dynamic-menu__cell{
 	display:inline-block;
 	margin: 5px 5px 5px 5px;
 }
 
-.b-menu_transparent_off{
+.b-dynamic-menu_transparent_off{
     background: inherit;
     -webkit-border-radius: inherit;
     -moz-border-radius: inherit;
     border-radius: inherit;
 }
-.b-menu_transparent_off .b-menu__cell{
+.b-dynamic-menu_transparent_off .b-dynamic-menu__cell{
     background: inherit;
 }
-.b-menu_transparent_off img{
+.b-dynamic-menu_transparent_off img{
     background: inherit;
 }
 
-.b-memu__selected-cell{
+.b-dynamic-menu__selected-cell{
     height: 50px;
     overflow: hidden;
 }
-.b-memu__selected-cell .b-menu__cell{
+.b-dynamic-menu__selected-cell .b-dynamic-menu__cell{
     width:45px;
 }
-.b-memu__selected-cell .b-menu__cell[alt]:after{
+.b-dynamic-menu__selected-cell .b-dynamic-menu__cell[alt]:after{
 	border: 1px solid #c8c5c2;
     width:85px;
 }
 
-.b-memu__content{
+.b-dynamic-menu__content{
 
 }
 
 /*for cell*/
-.b-menu__cell{
+.b-dynamic-menu__cell{
     width: 45px;
     height: 45px;
     margin: 1px 90px 3px 2px;
@@ -55,7 +55,7 @@
 
     box-shadow: 0px 0px 6px #f5f2ef;
 }
-.b-menu__cell[alt]:after{
+.b-dynamic-menu__cell[alt]:after{
     position: absolute;
     content: attr(alt);
     width: 0px;
@@ -68,22 +68,22 @@
     background: inherit;
     -webkit-transition: all 0.5s ease;/*расширить кросбраузерно*/
 }
-.b-menu__cell:hover:after{
+.b-dynamic-menu__cell:hover:after{
     width: 85px;
 	border: 1px solid #c8c5c2;
     border-left: none;
 }
 
-.b-menu__cell img{
+.b-dynamic-menu__cell img{
     width: 100%;
     height: 100%;
     margin: 0px 0px 0px 0px;
 }
 
-.b-menu__cell_active, .b-menu__cell_active span:before{
+.b-dynamic-menu__cell_active, .b-dynamic-menu__cell_active span:before{
     width:0px;
 }
-.b-menu__cell_active[alt]:after{
+.b-dynamic-menu__cell_active[alt]:after{
 	border: 1px solid #c8c5c2;
     width:85px;
 }
