--- a/b-/b-request-history/b-request-history.css
+++ b/b-/b-request-history/b-request-history.css
@@ -1,10 +1,35 @@
-.b-request-history{
-	max-width: 70%;
+.b-request-history__wrapper{
+	position: relative;
+	white-space: nowrap;
+	width: 70%;
 	height: 50px;
 	overflow: hidden;
+	padding-right: 40px;
+	
+	-moz-user-select: -moz-none;
+	-o-user-select: none;
+	-khtml-user-select: none;
+	-webkit-user-select: none;
+	user-select: none;
+}
+.b-request-history__slider{
+	cursor:pointer;
+	background: #FF9900;
+	position: absolute;
+	bottom: 0;
+	width: 20px;
+	height: 5px;
+	border: 1px solid rgb(221, 221, 221);
+}
+.b-request-history{
+	position: relative;
+	white-space: nowrap;
+	max-width: 100%;
+	height: 70px;
+	overflow-y: hidden;
+	overflow-x: auto;
 	font-size: 16px;
 	color: rgb(255, 0, 0);
-	padding: 0;
 	text-shadow: 1px 1px 1px rgb(219, 219, 219);
 }
 .b-request-history__link{
