--- a/b-/b-dynamic-history/b-dynamic-history.css
+++ b/b-/b-dynamic-history/b-dynamic-history.css
@@ -1,4 +1,4 @@
-.b-request-history__wrapper{
+.b-dynamic-history__wrapper{
 	position: relative;
 	white-space: nowrap;
 	width: 70%;
@@ -12,7 +12,7 @@
 	-webkit-user-select: none;
 	user-select: none;
 }
-.b-request-history__slider{
+.b-dynamic-history__slider{
 	cursor:pointer;
 	background: #FF9900;
 	position: absolute;
@@ -21,7 +21,7 @@
 	height: 5px;
 	border: 1px solid rgb(221, 221, 221);
 }
-.b-request-history{
+.b-dynamic-history{
 	position: relative;
 	white-space: nowrap;
 	max-width: 100%;
@@ -32,7 +32,7 @@
 	color: rgb(255, 0, 0);
 	text-shadow: 1px 1px 1px rgb(219, 219, 219);
 }
-.b-request-history__link{
+.b-dynamic-history__link{
 	display: inline-block;
 	text-decoration: none;
 	margin: 10px 1px;
@@ -43,13 +43,13 @@
 	border: 1px solid #FF0000;
 	box-shadow: -2px 0px 3px rgb(94, 89, 89);
 }
-.b-request-history__link:hover{
+.b-dynamic-history__link:hover{
 	color:#D9FFD9;
 }
-.b-request-history__link:last-child{
+.b-dynamic-history__link:last-child{
 	border-right:none;
 }
-.b-request-history__link:last-child:after{
+.b-dynamic-history__link:last-child:after{
 	position: absolute;
 	display: inline-block;
 	padding: 0;
